2006-04-14  Nate Nielsen  <nielsen@memberwebs.com>

    * COPYING-LIBCRYPTUI (added):
    * configure.in: 
    * libcryptui/Makefile.am: Install libcryptui library properly
    
2006-04-13  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/gedit/Makefile.am:
    * plugins/gedit/seahorse-gedit-plugin.c: Fix build of gedit 
    2.14 plugin. 
    
2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-operation.c: Fix problem where multi
    operations aren't cleaned up properly, leading to random 
    crashes, when a signal fires on a dangling pointer.
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * src/seahorse-key-properties.c: Hide non relevant elements
    when the key is not local (ie: from a key server)
    
2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c: Fix crasher when 
    server returns error but no text. Fixes bug #336191
    
2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/gedit/seahorse-gedit.c: Fix crasher when decrypt
    or verify fail.
    
2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * acinclude.m4 (added):
    * configure.in:
    * daemon/Makefile.am:
    * daemon/org.gnome.seahorse.service.in: Add DBUS activation
    
2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * Makefile.am:
    * configure.in:
    * daemon/seahorse-service-crypto.c:
    * daemon/seahorse-service-crypto.xml:
    * daemon/seahorse-service.h:
    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-key-chooser.h:
    * libcryptui/cryptui-key-combo.c:
    * libcryptui/cryptui-key-combo.h:
    * libcryptui/cryptui-key-list.c:
    * libcryptui/cryptui-key-list.h:
    * libcryptui/cryptui-keyset.h:
    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui.c:
    * libcryptui/cryptui.h:
    * libcryptui/tests/cryptui-test-keyset.c:
    * libcryptui/tests/cryptui-test-ui.c:
    * libseahorse/seahorse-signatures.c: