@@ -3,6 +3,7 @@
     * COPYING-LIBCRYPTUI (added):
     * configure.in: 
     * libcryptui/Makefile.am: Install libcryptui library properly
+    * daemon/Makefile.am: Include missing files in tarball
     
 2006-04-13  Nate Nielsen  <nielsen@memberwebs.com>
 
